# Newth

./: .astyleo  .gitignore  .gitmodules  README.md  Watt32s.pat
.github/workflows/: Autotools.yml
Autotool/: Makefile.am  README.md  autoconf.ac
Autotools/: Makefile.am  configure.ac
CMake/: CML.txt  CMakeLists.txt  README.md  mingw32-crtdll.cmake
CodeBlks/: Newth.ws  README.md  dl.cbp  th gui.cbp  th.cbp  unittest.cbp
CodeBlocks/: CodeBlocks.cbp  Newth.cbp  Newth.workspace  dl.cbp  th gui.cbp  th.cbp
DJGPP/: README.md  makefile  publish.sh
VC6/: README.md  dl.dsp  newth.dsw  th gui.dsp  th.dsp
VC6/dl/: dl.dsp
Watcom/: DOSTH.MAK  DOSTH4GW.MAK  README.md  TH.MAK  TH16.MAK  TH32.MAK  publish.sh
Watcom/Dos16/: makefile  th.mak
Watcom/Dos4g/: makefile  th.mak
Watcom/WinNT/: makefile
Zig/: README.md  build.zig
ext/: README.md
src/: README.md  astyleo  client.c  server.c
src/cli/: dl.c  th.c
src/client/: err.c  err.h  io.c  io.h  queue.c  queue.h  recvbufr.c  recvbufr.h  site.c  site.h  uri.c  uri.h  xml.c  xml.h
src/client/site/: file.c  file.h  http.c  http.h
src/common/: client.c  debug.h  defines.h  err.c  err.h  hex.c  hex.h  http.h  server.c  server.h  signal.c  signal.h
src/gui/win32/: iwindows.c  iwindows.h  main.c  res.h  res.rc  resource.h  vsxp.xml  wnewserv.c  wnewserv.h  wrunserv.c  wrunserv.h
src/platform/: doswatb.c  doswatb.h  mockput.c  mockput.h  mscrtdl.c  mscrtdl.h  owatcom.c  owatcom.h  platform.c  platform.h  posix01.c  posix01.h  unix.c  unix.h  watt32.c  watt32.h  winsock.c  winsock.h  ws2.c  ws2.h
src/platform/winsock/: wsipv6.c  wsipv6.h  wsock1.c  wsock1.h  wsock2.c  wsock2.h
src/platform/ws2/: ipv6.c  ipv6.h
src/server/: defer.c  defer.h  event.c  event.h  http.c  http.h  routine.c  routine.h  sendbufr.c  sendbufr.h  server.c  server.h  sockbufr.c  sockbufr.h
src/server/mltiplex/: poll.c  select.c
test/: common.h  fetch.h  mock.h  platform.h  queue.h  recvbufr.h  request.h  sendbufr.h  site.h  sockbufr.c  sockbufr.h  test.c  xml.h
